Remove bad example

--- a/examples/build.conf
+++ b/examples/build.conf
@@ -5,11 +5,11 @@
 
 # Name of the package (without .deb extension)
 # Note: You can use the $version variable
-name="mypackage-$version"
+name=
 
 # Path of the sources
 # Destination of your sources
-path="/usr/src/ssh-notify"
+path=
 
 # Files to clean
 # Prefix with / to specify an absolute path
