Move prebuild process before everything

--- a/examples/build.conf
+++ b/examples/build.conf
@@ -4,7 +4,8 @@
 #
 
 # Name of the package (without .deb extension)
-# Note: You can use the $version variable
+# Note: You can use the {version} tag to indicate version
+# e.g. mypackage-{version}
 name=
 
 # Path of the sources
